--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ body {
     font-size: 24px;
 }
 
-h1, h2, h3, p {
+h1, h2, h3, p, span {
     padding: 0;
     margin: 0;
 }
@@ -59,7 +59,7 @@ input[type=number] {
 .header {
     display: flex;
     justify-content: center;
-    padding: 2.75rem 0;
+    padding: 3rem 0 1.5rem;
 }
 
 /* footer Content */
@@ -108,7 +108,7 @@ input[type=number] {
 .calculator {
     background: var(--clr-lgt);
     border-radius: 20px;
-    padding: 1.5rem;
+    padding: 2rem;
     min-height: calc(100vh - 175px);
     width: 375px;     /* set for mobile size */
     margin: 0 auto;
@@ -138,7 +138,7 @@ input[type=number] {
 .calculator__inputs_titles {
     color: var(--clr-drk-gry);
     font-size: 1rem;
-    margin-bottom: 1.25rem;
+    margin-bottom: 0.5rem;
     display: flex;
     justify-content: space-between;
 }
@@ -150,7 +150,7 @@ input[type=number] {
     width: 100%;
     background: var(--clr-lgt-gry2);
     height: 3rem;
-    margin-bottom: 2rem;
+    margin: 0 0 2rem;
     text-align: right;
     font-family: var(--ff-primary);
     font-weight: var(--fw-bold);
@@ -184,6 +184,7 @@ input[type=number] {
 
 .calculator__inputs_percentages {
     display: grid;
+    padding-top: .5rem;
     grid-template-columns: 1fr 1fr;
     grid-gap: 1rem 1rem;
 }
